--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ credentials.js
 config.js
 session_data.json
 session_data_*.json
+example_data_analysis.py
 
 # Editor directories and files
 .vscode/*
